--- a/css/index.css
+++ b/css/index.css
@@ -4,44 +4,26 @@ body {
   overflow-x: hidden;
 }
 
-.side-navbar {
-  display : none;
-  width: 180px;
-  height: 100%;
-  position: fixed;
-  margin-left: -300px;
-  background-color: #100901;
-  transition: 0.5s;
-}
-
-#logInOrOut {
-    margin: 0;
-}
-
-.my-container {
-  transition: 0.4s;
-}
-
-.active-nav {
-  margin-left: 0;
-}
-
-.active-cont {
-  margin-left: 180px;
-}
-
-#menu-btn {
-  background-color: white;
-  margin-left: 20px;
-}
-
-#footer {
-   position:absolute;
-   bottom:0;
-   width:100%;
-   height:60px;
+.logo {
+  width: 30%;
 }
 
 .navbar {
     background-color: #F29526;
+}
+
+.nav-link {
+  text-decoration: none;
+  color : #FFFFFF;
+}
+
+.nav-link:hover {
+  text-decoration: none;
+  color: #E0E0E0;
+}
+
+
+.nav-link:active {
+  text-decoration: none;
+  color: #E0E0E0;
 }
