--- a/css/learn.css
+++ b/css/learn.css
@@ -6,8 +6,8 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 20px;
-  }
+    width: 2px;
+}
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
@@ -19,20 +19,23 @@ body {
 .h-80{
     height:80%;
 }
-::-webkit-scrollbar {
-    width: 2px;
-}
+
 
 .mainview{
     border-radius: 10px;
 }
 
+.learnview{
+    height:100%;
+}
+
 .learntab {
     margin-top: 10px;
     background-color: white;
-    border-radius: 5px;
+    border-radius: 10px;
     height: 97%;
 }
+
 
 #article {
     padding-top: 2%;
@@ -83,4 +86,8 @@ body {
     position: relative;
     bottom: 20%;
     left: 10px;
+}
+
+.shadow{
+    box-shadow: 0 0 1rem rgba(0,0,0,.15)!important;
 }
