--- a/css/profile.css
+++ b/css/profile.css
@@ -26,11 +26,8 @@ body {
     top: 50%;
 }
 
-.historyView{
-}
-
 .historyCard{
-    height:90%;
+    height:95%;
     padding-top: 2%;
     padding-left: 5%;
     border-radius: 10px;
@@ -38,12 +35,35 @@ body {
 
 .profileCard{
     border-radius: 10px;
-    padding-top: 2%;
-    padding-left: 5%;
+    padding-top: 4%;
+    padding-left: 5%;    
+    padding-right: 5%;
 }
 
 
+.btn-outline-warning{
+    border-color: #F29526;
+    color: #F29526;
+}
+
+.btn-outline-warning:hover{
+    background-color: #F29526;
+    color:white;
+}
 
 .shadow{
     box-shadow: 0 0 1rem rgba(0,0,0,.15)!important;
+}
+
+.profilePicture{
+    border-radius: 50%;
+}
+
+.form-group{
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+.form-control{
+    margin-bottom: 5%;
 }
