--- a/css/login.css
+++ b/css/login.css
@@ -54,6 +54,28 @@ body.login-page {
   width: 100%;
 }
 
+.login-page .form-group input {
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+}
+
+.login-page .form-group .success input {
+  border-color: #2ecc71;
+}
+
+.login-page .form-group .error input {
+  border-color: #e74c3c;
+}
+
+.login-page .form-group small {
+  visibility: hidden;
+}
+
+.login-page .form-group.error small {
+  color: #e74c3c;
+  visibility: visible;
+}
+
 .login-page .btn.btn-block {
   padding: 12px 10px;
   background-color: #F29526;
