--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
@@ -8,7 +8,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-size: 100% 100%;
+  background-attachment: fixed;
 }
 
 body.login-page {
@@ -50,24 +50,58 @@ body.login-page {
   border-width: 2.3px;
 }
 
+.login-page .form-group {
+  margin: 0;
+  position: relative;
+}
+
 .login-page .form-group label {
+  display: inline-block;
   width: 100%;
 }
 
 .login-page .form-group input {
+  display: block;
   border: 2px solid #f0f0f0;
   border-radius: 4px;
+  width: 100%;
+  padding: 10px;
 }
 
-.login-page .form-group .success input {
+.login-page .form-group i {
+  position: absolute;
+  right: 10px;
+  top: 38px;
+  visibility: hidden;
+}
+
+.login-page .form-group input:valid {
   border-color: #2ecc71;
 }
 
-.login-page .form-group .error input {
+.login-page .form-group input:invalid {
   border-color: #e74c3c;
 }
 
+.login-page .form-group i{
+  visibility: hidden;
+}
+
+.login-page .form-group.success i.bi-check-circle-fill {
+  visibility: visible;
+  color: #2ecc71;
+}
+
+.login-page .form-group.error i.bi-exclamation-circle-fill {
+  visibility: visible;
+  color: #e74c3c;
+}
+
 .login-page .form-group small {
+  visibility: hidden;
+}
+
+.login-page .form-group.success small {
   visibility: hidden;
 }
 
